--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   adhara_socket_io: 0.4.2+1
   flutter_cache_manager: 2.0.0
   image: 2.1.19
+  intl: 0.16.1
 
 dev_dependencies:
   flutter_test:
